@@ -236,7 +236,6 @@
 { "directory": "@", "file": "dyn_start.c", "output": "dyn_start.o", "arguments": [ "clang", "-c", "dyn_start.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "dyn_stop.c", "output": "dyn_stop.o", "arguments": [ "clang", "-c", "dyn_stop.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "foo.c", "output": "foo.o", "arguments": [ "clang", "-c", "foo.c", "-I.", "-Iinclude" ]}, 
-{ "directory": "@", "file": "hups.c", "output": "hups.o", "arguments": [ "clang", "-c", "hups.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "json.c", "output": "json.o", "arguments": [ "clang", "-c", "json.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "ldso.c", "output": "ldso.o", "arguments": [ "clang", "-c", "ldso.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "netlink.c", "output": "netlink.o", "arguments": [ "clang", "-c", "netlink.c", "-I.", "-Iinclude" ]}, 
@@ -432,6 +431,7 @@
 { "directory": "@", "file": "lib/opendir.c", "output": "opendir.o", "arguments": [ "clang", "-c", "lib/opendir.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "lib/perror.c", "output": "perror.o", "arguments": [ "clang", "-c", "lib/perror.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "lib/posix_fallocate.c", "output": "posix_fallocate.o", "arguments": [ "clang", "-c", "lib/posix_fallocate.c", "-I.", "-Iinclude" ]}, 
+{ "directory": "@", "file": "lib/posix_memalign.c", "output": "posix_memalign.o", "arguments": [ "clang", "-c", "lib/posix_memalign.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "lib/pread.c", "output": "pread.o", "arguments": [ "clang", "-c", "lib/pread.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "lib/pselect.c", "output": "pselect.o", "arguments": [ "clang", "-c", "lib/pselect.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "lib/putenv.c", "output": "putenv.o", "arguments": [ "clang", "-c", "lib/putenv.c", "-I.", "-Iinclude" ]}, 
@@ -899,6 +899,7 @@
 { "directory": "@", "file": "libstdio/__freading.c", "output": "__freading.o", "arguments": [ "clang", "-c", "libstdio/__freading.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/__fwritable.c", "output": "__fwritable.o", "arguments": [ "clang", "-c", "libstdio/__fwritable.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/clearerr.c", "output": "clearerr.o", "arguments": [ "clang", "-c", "libstdio/clearerr.c", "-I.", "-Iinclude" ]}, 
+{ "directory": "@", "file": "libstdio/dprintf.c", "output": "dprintf.o", "arguments": [ "clang", "-c", "libstdio/dprintf.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/fclose.c", "output": "fclose.o", "arguments": [ "clang", "-c", "libstdio/fclose.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/fdglue.c", "output": "fdglue.o", "arguments": [ "clang", "-c", "libstdio/fdglue.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/fdglue2.c", "output": "fdglue2.o", "arguments": [ "clang", "-c", "libstdio/fdglue2.c", "-I.", "-Iinclude" ]}, 
@@ -936,6 +937,7 @@
 { "directory": "@", "file": "libstdio/stdout.c", "output": "stdout.o", "arguments": [ "clang", "-c", "libstdio/stdout.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/tmpfile.c", "output": "tmpfile.o", "arguments": [ "clang", "-c", "libstdio/tmpfile.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/ungetc.c", "output": "ungetc.o", "arguments": [ "clang", "-c", "libstdio/ungetc.c", "-I.", "-Iinclude" ]}, 
+{ "directory": "@", "file": "libstdio/vdprintf.c", "output": "vdprintf.o", "arguments": [ "clang", "-c", "libstdio/vdprintf.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/vfdprintf.c", "output": "vfdprintf.o", "arguments": [ "clang", "-c", "libstdio/vfdprintf.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/vfprintf.c", "output": "vfprintf.o", "arguments": [ "clang", "-c", "libstdio/vfprintf.c", "-I.", "-Iinclude" ]}, 
 { "directory": "@", "file": "libstdio/vfscanf.c", "output": "vfscanf.o", "arguments": [ "clang", "-c", "libstdio/vfscanf.c", "-I.", "-Iinclude" ]}, 
